*SVN*

* Fixed that Base.table_name would expect a parameter when used in has_and_belongs_to_many joins [Anna Lissa Cruz]

* Fixed that nested transactions now work by letting the outer most transaction have the responsibilty of starting and rolling back the transaction.
  If any of the inner transactions swallow the exception raised, though, the transaction will not be rolled back. So always let the transaction
  bubble up even when you've dealt with local issues. Closes #231 and #340.

* Fixed validates_{confirmation,acceptance}_of to only happen when the virtual attributes are not nil #348 [dpiddy@gmail.com]

* Added a require_association hook on const_missing that makes it possible to use any model class without requiring it first. This makes STI look like:

    before:
      require_association 'person'
      class Employee < Person
      end
    
    after:
      class Employee < Person
      end

  This also reduces the usefulness of Controller.model in Action Pack to currently only being for documentation purposes.      

* Added that Base.update_all and Base.delete_all return an integer of the number of affected rows #341

* Changed the interface on AbstractAdapter to require that adapters return the number of affected rows on delete and update operations.

* Added that query benchmarking will only happen if its going to be logged anyway #344

* Added higher_item and lower_item as public methods for acts_as_list #342 [Tobias Luetke]

* Added respondence to *_before_type_cast for all attributes to return their string-state before they were type casted by the column type.
  This is helpful for getting "100,000" back on a integer-based validation where the value would normally be "100".

* Fixed the automated timestamping feature when running under Rails' development environment that resets the inheritable attributes on each request.
