@@ -1,5 +1,8 @@
 *SVN*
 
+* Fixed that overriding an attribute's accessor would be disregarded by add_on_empty and add_on_boundary_breaking because they simply used 
+  the attributes[] hash instead of checking for @base.respond_to?(attr.to_s). [Marten]
+
 * Fixed that Base.table_name would expect a parameter when used in has_and_belongs_to_many joins [Anna Lissa Cruz]
 
 * Fixed that nested transactions now work by letting the outer most transaction have the responsibilty of starting and rolling back the transaction.
